log
Tue 14 May 2024 03:34:12 PM UTC: 
 sudoku.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
 tests:  2|4
total_score: 15/70
28438e6
Tue 14 May 2024 03:45:42 PM UTC: 
 sudoku.c | 15 ++++++++++++++-
 1 file changed, 14 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:48:11: error: unused variable ‘count’ [-Werror=unused-variable]
   48 |       int count = 0;
      |           ^~~~~
cc1: all warnings being treated as errors
Compilation failed
682b7a2
Tue 14 May 2024 03:45:49 PM UTC: 
 sudoku.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  5|3
total_score: 35/70
2015935
Tue 14 May 2024 03:51:01 PM UTC: 
 sudoku.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  5|3
total_score: 35/70
41cb2a1
Thu 16 May 2024 12:14:06 AM UTC: 
 sudoku.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  0|5
total_score: 0/70
798fa9f
Thu 16 May 2024 12:15:44 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
5b5160c
Thu 16 May 2024 12:16:47 AM UTC: 
 sudoku.c | 8 --------
 1 file changed, 8 deletions(-)
 tests:  5|3
total_score: 35/70
43e4037
